# appconfiguration-rust-sdk

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Cargo.toml  README.md  README.tpl  release.toml
.github/: PULL_REQUEST_TEMPLATE
.github/workflows/: main.yml  pre-commit.yml  release-plz.yml  rust.yml
examples/: README.md  demo.rs
src/: entity.rs  errors.rs  feature.rs  lib.rs  models.rs  offline.rs  property.rs  segment_evaluation.rs  value.rs
src/builders/: mod.rs
src/client/: app_configuration.rs  app_configuration_client.rs  app_configuration_http.rs  app_configuration_ibm_cloud.rs  app_configuration_offline.rs  app_configuration_sdk.rs  cache.rs  configuration.rs  feature.rs  feature_proxy.rs  feature_snapshot.rs  http.rs  metering.rs  metering_client_http.rs  mod.rs  property.rs  property_proxy.rs  property_snapshot.rs  resource.rs
src/metering/: client.rs  client_http.rs  errors.rs  metering.rs  mod.rs  models.rs  serialization.rs
src/models/: configuration.rs  evaluation_result.rs  feature_snapshot.rs  mod.rs  property_snapshot.rs  rollout_configuration.rs  secret_property.rs
src/network/: cache_file.rs  configuration_http.rs  connectivity.rs  errors.rs  http_client.rs  mod.rs  token_provider.rs
src/network/configuration_sync/: current_mode.rs  errors.rs  live_configuration.rs  mod.rs  offline.rs  thread.rs  thread_handle.rs  update_thread_worker.rs
src/network/live_configuration/: current_mode.rs  errors.rs  live_configuration.rs  mod.rs  offline_mode.rs  update_thread_worker.rs
src/network/models/: configuration.rs  metering.rs  mod.rs
src/network/serialization/: config_value.rs  configuration.rs  environment.rs  feature.rs  mod.rs  property.rs  rule.rs  segment.rs  segment_rule.rs  segments.rs  value_type.rs
src/provider/: configuration_provider.rs  mod.rs
src/segment_evaluation/: errors.rs  matches_attributes.rs  matches_entity.rs  mod.rs  rule_operator.rs
src/test_utils/: mod.rs
src/tests/: mod.rs  test_get_feature.rs  test_get_feature_ids.rs  test_get_property.rs  test_get_property_ids.rs  test_using_example_data.rs
src/utils/: mod.rs  rollout_parser.rs  thread_handle.rs  waitable.rs
tests/: test_app_config.rs  test_initial_configuration_fails.rs  test_initial_configuration_from_server.rs  test_offline_mode.rs  test_ws_connection_close.rs  test_ws_connection_fails.rs  test_ws_reconnect_after_close.rs
tests/common/: mod.rs
