[package]
name = "ibm-appconfiguration-rust-sdk"
version = "0.1.0-rc.0"
authors = ["IBM"]
edition = "2024"
description = "The IBM Cloud App Configuration Rust SDK is used to perform feature flag and property evaluation based on the configuration on IBM Cloud App Configuration service."
repository = "https://github.com/IBM/appconfiguration-rust-sdk"
readme = "README.md"
keywords = ["ibm", "feature-flag", "remote-control"]
categories = ["config"]
license = "Apache-2.0"
homepage = "https://cloud.ibm.com/docs/app-configuration"
include = [
    "src/**/*",
    "examples/**/*",
    "README.md",
    "LICENSE"
]

[features]
test_utils = []

[dependencies]
reqwest = { version = "0.13.0", features = ["json", "blocking", "query", "form"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
murmur3 = "0.5.2"
tungstenite = { version = "0.29.0", features = ["native-tls"] }
url = "2.5.4"
thiserror = "2.0.7"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.27"
rand = "0.9.2"

[dev-dependencies]
ibm-appconfiguration-rust-sdk = { path = ".", features = ["test_utils"] }
dotenvy = "0.15.7"
env_logger = "0.11"
rstest = "0.26.0"
httpmock = "0.8.0"

[badges]
github = { repository = "IBM/appconfiguration-rust-sdk" }
